2008-11-10  kitone  <kitone@gna.org>

	* configure.in:
	Fix: Change to tar-ustar. (name > 99)

2008-11-10  kitone  <kitone@gna.org>

	* plugins/actions/videoplayermanagement/VideoPlayerManagement.cc:
	* plugins/actions/viewmanager/ViewManager.cc:
	Fix: add tooltips.

2008-11-09  kitone  <kitone@gna.org>

	* plugins/actions/externalvideoplayer/ExternalVideoPlayer.cc:
	Fix: action name and add tooltip.

2008-11-09  kitone  <kitone@gna.org>

	* plugins/actions/configurekeyboardshortcuts/ConfigureKeyboardShortcuts.cc:
	Work now without menubar.xml.

2008-11-09  kitone  <kitone@gna.org>

	* src/Waveform.cc:
	* src/we/WaveformGenerator.cc:
	* src/we/WaveformRenderer.cc:
	Improvement by removing unnecessary conversion.

2008-11-08  kitone  <kitone@gna.org>

	* plugins/actions/preferences/Makefile.am:
	* plugins/actions/preferences/PreferencesPlugin.cc:
	* plugins/actions/preferences/PreviewPage.h:
	* plugins/actions/preferences/dialog-preferences.glade:
	Remove Preview (External Video Player) code/page.

2008-11-08  kitone  <kitone@gna.org>

	* plugins/actions/externalvideoplayer/ExternalVideoPlayer.cc:
	* plugins/actions/externalvideoplayer/Makefile.am:
	* plugins/actions/externalvideoplayer/dialog-external-video-player-preferences.glade:
	Add preferences dialog.

2008-11-08  kitone  <kitone@gna.org>

	* src/ExtensionManager.cc:
	Add a test in load_path.

2008-11-07  kitone  <kitone@gna.org>

	* src/formats/AdvancedSubStationAlpha.h:
	* src/formats/SubStationAlpha.h:
	Add line break policy option: soft, hard, intelligent.

2008-11-07  kitone  <kitone@gna.org>

	* src/Config.cc:
	* src/Config.h:
	Add value comment to set_value_* functions.

2008-11-06  kitone  <kitone@gna.org>

	* plugins/actions/videoplayermanagement/VideoPlayerManagement.cc:
	* plugins/actions/wavefrommanagement/WaveformManagement.cc:
	Remove menu Video and Waveform already create in MenuBar.

2008-11-06  kitone  <kitone@gna.org>

	* plugins/actions/dialoguize/Dialoguize.cc: